<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Bloom Reader</string>
    <string name="delete">Delete</string>
    <string name="deleteConfirmation">Delete from device?</string>
    <!-- %1$s is a book title -->
    <string name="deleteExplanationBook">%1$s will disappear from your device.</string>
    <!-- %1$s is the name of the shelf -->
    <string name="deleteExplanationEmptyShelf">The %1$s bookshelf will disappear from your device.</string>
    <!-- %1$d is the number of books and shelves to be deleted; %2$s is the name of the shelf -->
    <string name="deleteExplanationShelf">All %1$d books and shelves in the %2$s bookshelf will disappear from your device.</string>
    <string name="deleteConfirmButton">Delete now</string>
    <string name="share">Share</string>
    <!-- %1$s is a book title -->
    <string name="shareBook">Share %1$s</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="get_books_local_wifi">Receive books from Bloom on a computer, over Wifi</string>
    <!-- %1$s is a book title -->
    <string name="already_have_version">Found \"%1$s\", already have this version.</string>
    <!-- %1$s is a book title; %2$s is a description of the sending network -->
    <string name="found_new_version">Found new version of \"%1$s\" from \"%2$s\", requesting…</string>
    <!-- %1$s is a book title; %2$s is a description of the sending network -->
    <string name="found_file">Found \"%1$s\" from \"%2$s\", requesting…</string>
    <!-- As in, Done receiving a file-->
    <string name="done">Done.</string>
    <string name="transferFailed">Something went wrong. If the source is still available, we\'ll try again soon.</string>
    <string name="downloading">Downloading…</string>
    <!-- %1$s is a description of the sending network -->
    <string name="looking_for_adds">Looking for book advertisements on WiFi network %1s…</string>
    <string name="device_hotspot">Device Hotspot</string>
    <string name="no_wifi_connected">The device does not appear to be connected to a WiFi network.</string>
    <string name="failed_book_import">Failed to import book.</string>
    <string name="failed_book_import2">Bloom Reader was not able to read the book "%1$s".</string>
    <string name="external_storage_unavailable">Unable to access file storage. Is the SD card missing?</string>

    <string name="need_newer_webview">In order to use this app, you will need to update the <a href="https://play.google.com/store/apps/details?id=com.google.android.webview">Android System WebView</a> from the Google Play Store and then restart the app.</string>

    <string name="share_app_link"><u>Share the link to get Bloom Reader on Google Play</u></string>
    <string name="share_app_with_friend">Share this Bloom Reader app with a friend!</string>
    <string name="share_books_with_friend">Share all your books with a friend who already has Bloom Reader installed.</string>
    <string name="share_app_via">Share App via</string>
    <string name="share_link_via">Share Link via</string>
    <string name="share_books_via">Share Books via</string>
    <!-- %1$s is the app name (defined by app_name) -->
    <string name="recommend_app">Read Bloom books with the %1$s app:</string>
    <string name="failed_to_share_apk">Failed to share app file.</string>
    <string name="failed_to_share_books">Failed to share books</string>
    <string name="failed_to_open_book">Unable to open book</string>
    <!-- %1$s is a book title -->
    <string name="missing_book">%1$s is missing. It may have been on an sd card that was removed, or it may have been deleted.</string>
    <string name="device_storage_is_full">Unable to open book. The device storage is full. Free up some space and try again.</string>
    <!-- %1$s is the name of a book or shelf being added from a bloombundle -->
    <string name="adding_book">Adding %1$s...</string>
    <string name="bundle_import_out_of_space">Not enough space on the device for all the books in this bundle.</string>
    <!-- %1$s is the name of a bloombundle that failed to import -->
    <string name="bundle_import_error">There was a problem reading %1$s. Try downloading it again.</string>

    <string name="share_app">Share Bloom Reader app</string>
    <string name="open_bloompub_file">Open BloomPUB file</string>
    <string name="open_bloombundle_file">Open BloomBundle file</string>
    <string name="searching">Searching...</string>
    <string name="no_books_added">No new Bloom books or bundles found on the device.</string>
    <string name="release_notes">Release Notes</string>
    <string name="about_bloom_reader">About Bloom Reader</string>
    <string name="about_bloom">About Bloom</string>
    <string name="about_sil">About SIL</string>
    <string name="or">or</string>
    <!-- Prior to BR 2.3, this message was "Receive books from computer"-->
    <string name="receive_books_over_wifi">Receive books via WiFi</string>
    <!-- Used both as a menu option and as the title of the resulting dialog-->
    <string name="receive_books_over_usb">Receive books via USB</string>
    <string name="ready_to_receive_usb">Bloom Reader is ready to receive books via USB cable from the Bloom Editor program</string>
    <string name="please_send_book">Please send a book from Bloom Editor and then choose this command again</string>

    <string name="bloomReaderUrl" translatable="false"><u>bloomlibrary.org</u></string>

    <string name="need_storage_permission">Bloom Reader needs access to file storage in order to work.</string>
    <string name="grant_storage_permission">Grant Storage Permission</string>
    <string name="renaming_invalid_book">Renaming invalid book to %1$s</string>
    <string name="preparing_to_show_books">Preparing to show books…</string>
    <string name="show_books_on_sd_card">Show Books on SD Card</string>
    <string name="please_click_use_this_folder">Bloom Reader will need your permission to show the books on your SD Card. After you touch "OK", Android will open a window. Touch the button that looks like this:</string>
    <string name="show_books_in_old_bloom_folder">Check for Lost Books</string>
    <string name="get_more_books">Get more books from our library</string>
    <string name="select_bloom_directory">Select Bloom directory</string>
    <string name="request_bloom_permission_usb">To receive books via USB, you will need to give Bloom Reader permission to use the "Bloom" folder at the root of Internal Storage. Touch "USE THIS FOLDER"</string>
    <string name="request_bloom_permission_lost">To find lost books, you will need to give Bloom Reader permission to use the "Bloom" folder at the root of Internal Storage. Touch "USE THIS FOLDER"</string>
    <string name="request_bloom_permission_device_stats">To finish setting up stats reporting, you will need to give Bloom Reader permission to use the "Bloom" folder at the root of Internal Storage. Touch "USE THIS FOLDER"</string>

    <string name="share_location">Share location</string>
    <string name="request_location">We would like to record your city because the people who share these books for free like to know where their books are being read.</string>
    <string name="allow">Allow</string>
    <!-- Response button to the above request for permission to use location -->
    <string name="dont_allow">Don\'t Allow</string>
    <!-- Response button to the above request for permission to use location -->

    <string name="turn_on_location">Turn on Location</string>
    <string name="request_gps">Authors &amp; Illustrators like to know where their free books are being read. But we need you to turn on your device\'s ability to use its GPS Location Service</string>
    <string name="attempting_to_send_reading_stats">Attempting to send reading stats...</string>
    <string name="all_reading_stats_sent">All reading stats sent.</string>

    <string name="find_lost_books">Find lost books</string>
    <string name="no_lost_books_found">No lost books found.</string>
    <string name="restart">Restart</string>
    <string name="close">Close</string>
    <string name="read_now">Read Now</string>
    <string name="download_is_complete">Book download is complete</string>
    <string name="downloads_are_complete">Book downloads are complete</string>
    <string name="downloading_file">Downloading %s</string>
    <string name="downloading_books">Downloading books</string>
    <string name="view_books">View books</string>
</resources>
